# autoresearch

./: .gitignore  BBC-Autoreseach design v1.md  CLAUDE.md  E0_Baseline_Experimental_Protocol.md  E0_Protocol_Flowchart.html  LAPORAN_EKSPERIMEN.md  README.md  autopush.sh  backfill_metrics.py  clean_labels.py  color_analysis_report.md  context.md  e0_protocol.py  experiment-journal.md  make_crop_dataset.py  make_merged_dataset.py  make_model_soup.py  make_single_class_dataset.py  modeling.py  orchestrator.py  pipeline.py  plot_e0_progress.py  plot_progress.py  post_train.sh  prepare.py  program.md  pyproject.toml  rangkuman-agent-claude.md  research.py  results.tsv  run_e0_with_push.sh  train.py  train_classifier.py  train_dinov2_classifier.py  train_rfdetr_small.py  two_stage_debug_report.md  two_stage_eval.py  watchdog.sh  wbf_ensemble.py
archive/: README.md  analysis.ipynb
archive/research/: RESEARCH_MASTER.md
archive/scripts/: toolbox.py
automation/: README.md
configs/: model_variants.yaml
context/: domain_knowledge.md  e0_results.md  research_overview.md
e0_results/: results.csv  state.json
experiments/: batch_001_report.md  log.md  results.tsv  state.json  summary.md
logs/: README.md
rangkuman-progress/: rangkuman.md
research/: RESEARCH_MASTER.md  experiment-journal.md  progress-agent-claude.md
scripts/: color_classifier.py  make_rfdetr_traintest_dataset.py  stage2_models.py  train_dinov2_corn_classifier.py  train_dinov2_ordinal_classifier.py  train_dinov2_supcon_imagefolder_classifier.py  two_stage_eval_v2.py  two_stage_hierarchical_eval.py
(+2168 files in other folders)
